--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,14 @@ body {
     text-align: center;
 }
 
+body.rtl {
+    direction: rtl;
+}
+
+body.rtl .btn-delete {
+    float: left;
+}
+
 header {
     height: 80px;
     width: 400px;
@@ -42,8 +50,8 @@ button {
 
 .book-filter {
     display: flex;
-    height: 150px;
-    width: 680px;
+    height: 155px;
+    width: 820px;
     background-color: rgba(0, 0, 0, 0.684);
     margin: auto;
     margin-top: 30px;
@@ -115,6 +123,35 @@ hr {
     cursor: pointer;
 }
 
+.lang-area {
+    width: 130px;
+}
+
+#lang {
+    height: 30px;
+    width: 80px;
+    margin: 0;
+    margin-top: 55px;
+    margin-right: 15px;
+    color: rgb(178, 178, 178);
+    font-size: 20px;
+}
+
+#language {
+    display: block;
+    height: 25px;
+    width: 100px;
+    margin: 0;
+    margin-right: 12px;
+    margin-top: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgba(167, 165, 165, 0.727);
+    color-scheme: dark;
+    color: rgba(61, 61, 61, 0.823);
+    cursor: pointer;
+}
+
 .page-number {
     display: inline-block;
     font-size: 22px;
@@ -144,6 +181,16 @@ hr {
     background-color: rgba(74, 64, 209, 0.625);
 }
 
+#btn-prev:hover {
+    background-color: rgba(57, 175, 57, 0.744);
+    color: rgba(255, 255, 255, 0.792);
+}
+
+#btn-next:hover {
+    background-color: rgba(57, 175, 57, 0.744);
+    color: rgba(255, 255, 255, 0.792);
+}
+
 .addBtn {
     margin: 0;
     height: 100px;
@@ -163,15 +210,7 @@ h1 {
     font-size: 40px;
     margin-top: 20px;
     padding-top: 15px;
-    color: rgba(255, 255, 255, 0.589);
-}
-
-h1 span {
-    color: rgb(225, 120, 22);
-}
-
-.i {
-    color: cornflowerblue;
+    color: rgba(255, 255, 255, 0.5);
 }
 
 button:hover {
@@ -316,7 +355,7 @@ th {
 
 .update-modal {
     display: flex;
-    height: 400px;
+    height: 450px;
     width: 400px;
     position: fixed;
     top: 250px;
@@ -371,7 +410,7 @@ form {
 .name-h1 {
     position: relative;
     height: 70px;
-    font-size: 35px;
+    font-size: 30px;
     color: white;
     padding: 0;
     inset: 0;
@@ -380,7 +419,7 @@ form {
 
 .price-h1 {
     position: absolute;
-    top: 180px;
+    top: 250px;
     left: 100px;
     font-size: 40px;
     color: rgb(160, 160, 160);
@@ -388,8 +427,8 @@ form {
 
 .rate-h1 {
     position: absolute;
-    top: 248px;
-    left: 180px;
+    top: 312px;
+    left: 185px;
     font-size: 30px;
     color: rgb(160, 160, 160);
 }
@@ -408,8 +447,8 @@ form {
 
 .btns.plus {
     position: absolute;
-    top: 250px;
-    left: 105px;
+    top: 314px;
+    left: 135px;
     height: 30px;
     width: 30px;
     border-radius: 10px;
@@ -422,8 +461,8 @@ form {
 
 .btns.minus {
     position: absolute;
-    top: 250px;
-    right: 100px;
+    top: 314px;
+    right: 135px;
     height: 30px;
     width: 30px;
     border-radius: 10px;
@@ -436,7 +475,7 @@ form {
 .enter-btn {
     position: absolute;
     margin: 0;
-    top: 320px;
+    top: 370px;
     right: 155px;
     background-color: rgba(255, 255, 255, 0.774);
     color: black;
